cmake_minimum_required(VERSION 3.15)
project(Module1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Task-3_1_queue
        src/queue.cpp)

add_executable(Task-1_2_square
        src/square.cpp)

add_executable(Task-2_3_intersection
        src/intersection.cpp)

add_executable(Task-6_4_k-stat-rand
        src/k-stat-rand.cpp)

add_executable(Task-4_4_rolling-maximum
        src/rolling-maximum.cpp)

