cmake_minimum_required(VERSION 3.15)
project(Module1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Task-3_1_queue
        src/HW/queue.cpp)

add_executable(Task-1_2_square
        src/HW/square.cpp)

add_executable(Task-2_3_intersection
        src/HW/intersection.cpp)

add_executable(Task-6_4_k-stat-rand
        src/HW/k-stat-rand.cpp)

add_executable(Task-4_4_rolling-maximum
        src/HW/rolling-maximum.cpp)

