set(MODULE_PREFIX M1)

#Testing:
add_executable(${PROJECT_PREFIX}-RK-1-TASK-1 src/RK/task-1.cpp)
add_executable(${PROJECT_PREFIX}-RK-1-TASK-2 src/RK/task-2.cpp)
add_executable(${PROJECT_PREFIX}-RK-1-TASK-3 src/RK/task-3.cpp)

#Home works:
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-TASK-1-3 src/HW/task-1-3.cpp)
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-TASK-2-3 src/HW/task-2-3.cpp)
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-TASK-3-3 src/HW/task-3-3.cpp)
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-TASK-4-2 src/HW/task-4-2.cpp)
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-TASK-5-3 src/HW/task-5-3.cpp)
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-TASK-6-4 src/HW/task-6-4.cpp)
