set(MODULE_PREFIX M3)

#Home works:
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-TASK-2 src/HW/task-2.cpp)
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-TASK-3 src/HW/task-3.cpp)

#Testing:
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-RK-TASK-2 src/RK/task-2.cpp)
add_executable(${PROJECT_PREFIX}-${MODULE_PREFIX}-RK-TASK-3 src/RK/task-3.cpp)